fix(core): 16563, 17210, 17439 analytics is not calculated, button states, feature flag (#648)
fix(core): analytics is not calculated on boundary selection
fix(ui): toolbar button states
fix(ui): sidebar button states
fix(core): "create layer" feature respects feature flag
fix(ui): toast invisible container blocks buttons
fix(ui): layer toggle button is selectable
feat(dev): enabled css sourcemaps fro dev mode

--- a/src/components/LayerControl/LayerControl.module.css
+++ b/src/components/LayerControl/LayerControl.module.css
@@ -32,6 +32,7 @@
   flex-flow: row nowrap;
   justify-content: center;
   gap: var(--unit);
+  user-select: none;
 }
 
 .loading {
