--- a/src/features/toasts/components/Toast/Toast.module.css
+++ b/src/features/toasts/components/Toast/Toast.module.css
@@ -1,18 +1,18 @@
 .container {
-  position: relative;
   transition: 0.8;
   z-index: calc(var(--modal) + 1);
   margin: 2px auto;
   width: 540px;
   min-height: 44px;
-  left: 0%;
-  right: 0%;
 }
 
 .toast {
   padding: 10px 0 12px 0;
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3), 0px 16px 24px rgba(0, 0, 0, 0.06),
-    0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
+  box-shadow:
+    0px 1px 2px rgba(0, 0, 0, 0.3),
+    0px 16px 24px rgba(0, 0, 0, 0.06),
+    0px 2px 6px rgba(0, 0, 0, 0.04),
+    0px 0px 1px rgba(0, 0, 0, 0.04);
   border-radius: 4px;
   color: var(--base-weak);
   width: 100%;
