--- a/src/features/toasts/components/ToastGroup/ToastGroup.module.css
+++ b/src/features/toasts/components/ToastGroup/ToastGroup.module.css
@@ -1,7 +1,8 @@
 .toasts {
   position: absolute;
   top: 48px;
-  width: 100%;
+  left: 50%;
+  transform: translate(-50%, 0);
   text-align: center;
   transition: 0.8;
   z-index: 100;
